# stubby

./: .gitignore  99-stubby-keychron.rules  CLAUDE.md  README.md
.github/workflows/: release.yml
stubby/: Cargo.toml  build.rs
stubby/src/: keycodes.rs  kle.rs  lib.rs  main.rs  probe.rs  slint_main.rs  via.rs
stubby/ui/: app.slint
