[package]
name = "stubby"
version = "0.1.0"
edition = "2021"
description = "Native (non-Electron) Keychron launcher — talks to the keyboard over raw HID using the VIA protocol"

[lib]
name = "stubby"
path = "src/lib.rs"

[[bin]]
name = "stubby-probe"
path = "src/probe.rs"

[[bin]]
name = "stubby"
path = "src/main.rs"

[dependencies]
hidapi = "2"
eframe = "0.29"
egui = "0.29"
serde_json = "1"
